@@ -91,7 +91,9 @@ namespace kt
 	{
 		int var=0;
 	
-		QRegExp rx ( "([*]|[0-9]{1,3}).([*]|[0-9]{1,3}).([*]|[0-9]{1,3}).([*]|[0-9]{1,3})" );
+		QRegExp rx ( "(([*]|[0-9]{1,3}).([*]|[0-9]{1,3}).([*]|[0-9]{1,3}).([*]|[0-9]{1,3}))" 
+		             "|(([0-9]{1,3}).([0-9]{1,3}).([0-9]{1,3}).([0-9]{1,3})-"
+			     "([0-9]{1,3}).([0-9]{1,3}).([0-9]{1,3}).([0-9]{1,3}))");
 		QRegExpValidator v ( rx,0 );
 	
 		QString ip = m_ip_to_add->text();
@@ -182,8 +184,9 @@ namespace kt
 	
 		QTextStream stream(&dat);
 		QString line;
-	
-		QRegExp rx("([*]|[0-9]{1,3}).([*]|[0-9]{1,3}).([*]|[0-9]{1,3}).([*]|[0-9]{1,3})");
+		QRegExp rx ( "(([*]|[0-9]{1,3}).([*]|[0-9]{1,3}).([*]|[0-9]{1,3}).([*]|[0-9]{1,3}))" 
+		             "|(([0-9]{1,3}).([0-9]{1,3}).([0-9]{1,3}).([0-9]{1,3})-"
+			     "([0-9]{1,3}).([0-9]{1,3}).([0-9]{1,3}).([0-9]{1,3}))");
 		QRegExpValidator v(rx,0);
 	
 		bool err = false;
