@@ -2,6 +2,7 @@ Changes in 4.0:
 - Make adding multiple trackers at once possible (213194) 
 - Bandwidth scheduler can now be deactivated temporarely
 - Show information message instead of error when trackerlists are merged (213772)
+- Add patch from Leo Trubach which adds support for IP rangs to the IP filter dialog
 
 Changes in 3.3.1:
 - Make sure exceptions in DHT code are caught, fixes a crash (213819)
